objects/fcio1__Service_Level_Policy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Actions__c</fullName>
        <label>Actions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__SLA_Timer_End_Field__c</fullName>
        <label>SLA Timer End Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__SLA_Timer_Start_Field__c</fullName>
        <label>SLA Timer Start Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Tag_Value__c</fullName>
        <label>Tag Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <externalId>true</externalId>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipLabel>Fullcast Service Level Policies</relationshipLabel>
        <relationshipName>Fullcast_Service_Level_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Thresholds__c</fullName>
        <label>Thresholds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Vacation_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacation Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Working_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <label>Fullcast Service Level Policy</label>
    <nameField>
        <label>Fullcast Service Level Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Service Level Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>